gen/bigtableadmin/v2/cargo-errors.log
    Checking google-bigtableadmin2 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/bigtableadmin/v2/lib)
error[E0428]: the name `ClusterState` is defined multiple times
   --> bigtableadmin/v2/lib/src/lib.rs:489:5
    |
306 |     pub enum ClusterState {
    |     --------------------- previous definition of the type `ClusterState` here
...
489 |     pub struct ClusterState {
    |     ^^^^^^^^^^^^^^^^^^^^^^^ `ClusterState` redefined here
    |
    = note: `ClusterState` must be defined only once in the type namespace of this module

error[E0574]: expected struct, variant or union type, found enum `ClusterState`

error[E0574]: expected struct, variant or union type, found enum `ClusterState`
   --> bigtableadmin/v2/lib/src/lib.rs:479:9
    |
479 |         Clone,
    |         ^^^^^ not a struct, variant or union type

error[E0574]: expected struct, variant or union type, found enum `ClusterState`
   --> bigtableadmin/v2/lib/src/lib.rs:485:9
    |
485 |         Default,
    |         ^^^^^^^ not a struct, variant or union type

error[E0574]: expected struct, variant or union type, found enum `ClusterState`
   --> bigtableadmin/v2/lib/src/lib.rs:489:16
    |
489 |     pub struct ClusterState {
    |                ^^^^^^^^^^^^ not a struct, variant or union type

error[E0119]: conflicting implementations of trait `std::cmp::PartialEq` for type `schemas::ClusterState`:
   --> bigtableadmin/v2/lib/src/lib.rs:480:9
    |
305 |     #[derive(Debug, Clone, PartialEq, Hash, PartialOrd, Ord, Eq, Copy)]
    |                            --------- first implementation here
...
480 |         PartialEq,
    |         ^^^^^^^^^ conflicting implementation for `schemas::ClusterState`

error[E0119]: conflicting implementations of trait `std::cmp::Eq` for type `schemas::ClusterState`:
   --> bigtableadmin/v2/lib/src/lib.rs:484:9
    |
305 |     #[derive(Debug, Clone, PartialEq, Hash, PartialOrd, Ord, Eq, Copy)]
    |                                                              -- first implementation here
...
484 |         Eq,
    |         ^^ conflicting implementation for `schemas::ClusterState`

error[E0119]: conflicting implementations of trait `std::cmp::Ord` for type `schemas::ClusterState`:
   --> bigtableadmin/v2/lib/src/lib.rs:483:9
    |
305 |     #[derive(Debug, Clone, PartialEq, Hash, PartialOrd, Ord, Eq, Copy)]
    |                                                         --- first implementation here
...
483 |         Ord,
    |         ^^^ conflicting implementation for `schemas::ClusterState`

error[E0119]: conflicting implementations of trait `std::cmp::PartialOrd` for type `schemas::ClusterState`:
   --> bigtableadmin/v2/lib/src/lib.rs:482:9
    |
305 |     #[derive(Debug, Clone, PartialEq, Hash, PartialOrd, Ord, Eq, Copy)]
    |                                             ---------- first implementation here
...
482 |         PartialOrd,
    |         ^^^^^^^^^^ conflicting implementation for `schemas::ClusterState`

error[E0119]: conflicting implementations of trait `std::clone::Clone` for type `schemas::ClusterState`:
   --> bigtableadmin/v2/lib/src/lib.rs:479:9
    |
305 |     #[derive(Debug, Clone, PartialEq, Hash, PartialOrd, Ord, Eq, Copy)]
    |                     ----- first implementation here
...
479 |         Clone,
    |         ^^^^^ conflicting implementation for `schemas::ClusterState`

error[E0119]: conflicting implementations of trait `std::hash::Hash` for type `schemas::ClusterState`:
   --> bigtableadmin/v2/lib/src/lib.rs:481:9
    |
305 |     #[derive(Debug, Clone, PartialEq, Hash, PartialOrd, Ord, Eq, Copy)]
    |                                       ---- first implementation here
...
481 |         Hash,
    |         ^^^^ conflicting implementation for `schemas::ClusterState`

error[E0119]: conflicting implementations of trait `std::fmt::Debug` for type `schemas::ClusterState`:
   --> bigtableadmin/v2/lib/src/lib.rs:478:9
    |
305 |     #[derive(Debug, Clone, PartialEq, Hash, PartialOrd, Ord, Eq, Copy)]
    |              ----- first implementation here
...
478 |         Debug,
    |         ^^^^^ conflicting implementation for `schemas::ClusterState`

error[E0119]: conflicting implementations of trait `schemas::_IMPL_SERIALIZE_FOR_AppProfile::_serde::Deserialize<'_>` for type `schemas::ClusterState`:
   --> bigtableadmin/v2/lib/src/lib.rs:486:9
    |
342 |     impl<'de> ::serde::Deserialize<'de> for ClusterState {
    |     ---------------------------------------------------- first implementation here
...
486 |         :: serde :: Deserialize,
    |         ^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `schemas::ClusterState`

error[E0119]: conflicting implementations of trait `schemas::_IMPL_SERIALIZE_FOR_AppProfile::_serde::Serialize` for type `schemas::ClusterState`:
   --> bigtableadmin/v2/lib/src/lib.rs:487:9
    |
334 |     impl ::serde::Serialize for ClusterState {
    |     ---------------------------------------- first implementation here
...
487 |         :: serde :: Serialize,
    |         ^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `schemas::ClusterState`

error[E0119]: conflicting implementations of trait `<PageIter<M, T> as std::iter::Iterator>::next::_IMPL_FIELD_SELECTOR_FOR_PaginatedResult::_field_selector::FieldSelector` for type `schemas::ClusterState`:
   --> bigtableadmin/v2/lib/src/lib.rs:494:5
    |
363 |     impl ::field_selector::FieldSelector for ClusterState {
    |     ----------------------------------------------------- first implementation here
...
494 |     impl ::field_selector::FieldSelector for ClusterState {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `schemas::ClusterState`

error: aborting due to 15 previous errors

Some errors have detailed explanations: E0119, E0428.
For more information about an error, try `rustc --explain E0119`.
error: Could not compile `google-bigtableadmin2`.

To learn more, run the command again with --verbose.
